--- a/css/main_ver2.css
+++ b/css/main_ver2.css
@@ -146,6 +146,7 @@
   font-size: 33px;
   margin-bottom: 20px;
   text-shadow: 2px 2px 5px #4f4141b3;
+  margin-left: 89px;
 }
 #island .inner .allcity .right .title p span {
   background-color: #ff8a33;
@@ -161,7 +162,7 @@
   display: block;
   position: absolute;
   top: -28px;
-  left: 206px;
+  left: 289px;
 }
 #island .inner .allcity .right img {
 
@@ -246,11 +247,11 @@
   font-size: 0;
   position: absolute;
   top: 1111px;
-  left: 58px;
+  left: 169px;
 }
 #island .background_new img{
   position: absolute;
-  width: 1810px;
+  width: 100%;
   height: 385px;
   bottom: 0;
   right: 0;
