--- a/css/title.css
+++ b/css/title.css
@@ -4,12 +4,13 @@
   height: 925px;
   top: -21px;
 }
-#title .inner {
+#title .background img {
 
+  width: 100%;
+  height: 100%;
 }
 #title .background{
   height: 925px;
-  background-image: url(../img/M_visual1.jpg);
 }
 #title .background .wave1{
   background-image: url(../img/wave1.svg);
